--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,13 +1,13 @@
 body {
-    font-family: 'Comic Neue', sans-serif;
-    background: rgb(241,241,241);
-    background: linear-gradient(180deg, rgba(241,241,241,1) 15%, rgba(119,234,240,1) 35%, rgba(46,228,237,1) 55%, rgba(118,225,189,1) 75%, rgba(244,221,105,1) 95%);
+    font-family: "Rajdhani", sans-serif;
+    background: #1b2330;
+    color: #45F882;
+    font-weight: 600;
 }
 
-.custom-header {
-    background: rgb(46,228,237);
-    background: radial-gradient(circle, rgba(46,228,237,0.8491771708683473) 15%, rgba(234,237,117,0.87718837535014) 50%, rgba(46,228,237,0.7903536414565826) 85%);
-    color: rgb(133, 136, 135);
+.custom-header{
+background-color: black;
+color: #34eb4f;
 }
 
 .carousel-item-img-wrapper {
@@ -18,12 +18,8 @@ body {
 }
 
 .carousel-item-img-wrapper img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 10px;
-    border: 5px solid white;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 80%;
+    max-height: 80%;
     transition: transform 0.3s;
 }
 
@@ -44,29 +40,42 @@ body {
 }
 
 .social-icon:hover i.fa-whatsapp {
-    color: #05af43; /* Color para WhatsApp */
+    color: #05af43;
 }
 
 .social-icon:hover i.fa-instagram {
-    color: #E4405F; /* Color para Instagram */
+    color: #E4405F;
 }
 
 .social-icon:hover i.fa-facebook {
-    color: #3b5998; /* Color para Facebook */
+    color: #3b5998;
 }
 
-
 .card {
+    background-color: transparent;
     transition: transform 0.3s;
     font-weight: bold;
+}
+
+.card-text, .card-title {
+    color: #45F882;
+    font-weight: 600;
 }
 
 .card:hover {
     transform: translateY(-10px);
 }
 
-.footer{
-    background: rgb(46,228,237);
-    background: radial-gradient(circle, rgba(46,228,237,0.8491771708683473) 15%, rgba(234,237,117,0.87718837535014) 50%, rgba(46,228,237,0.7903536414565826) 85%);
-    color: rgb(133, 136, 135);
+.custom-hr {
+    border: 0;
+    height: 3px; 
+    width: 80%; 
+    background-color: #34eb4f; 
+    margin: 20px auto; 
+}
+
+
+.footer {
+    background: black;
+    color: #34eb4f;
 }
